<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="percent">Percent</string>
    <string name="bill_label">Bill</string>
    <string name="tip_percent">Tip Percent</string>
    <string name="total_Label">Total</string>
    <string name="percentA">00%</string>
    <string name="tip_amount">$0.00</string>
    <string name="total_amount">$0.00</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="rounding">Rounding</string>
    <string name="per_person">Per Person</string>
    <string name="split">Split?</string>
    <string name="none">None</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="reset">Reset</string>

    <string-array name="split_array">
        <item>No</item>
        <item>2 Ways</item>
        <item>3 Ways</item>
        <item>4 Ways</item>
    </string-array>
</resources>
