<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="summers.tipcalculator.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button

        android:id="@+id/percentDownButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:text="@string/minus"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/percentTV"
        android:layout_alignBottom="@+id/percentTV"
        android:layout_toRightOf="@+id/percentUpButton"
        android:layout_toEndOf="@+id/percentUpButton" />

    <TextView
        android:id="@+id/percentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"

        android:text="@string/percent"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/billLabel"
        android:layout_alignLeft="@+id/tipLabel"
        android:layout_alignStart="@+id/tipLabel" />

    <TextView
        android:id="@+id/tipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="19dp"
        android:text="@string/tip_percent"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/percentUpButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/total_Label"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/tipLabel"
        android:layout_alignLeft="@+id/tipLabel"
        android:layout_alignStart="@+id/tipLabel" />

    <TextView
        android:id="@+id/tipPercentTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tipLabel"
        android:layout_alignBottom="@+id/tipLabel"
        android:layout_alignLeft="@+id/percentTV"
        android:layout_alignStart="@+id/percentTV"
        android:text="@string/tip_amount"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/totalTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/totalLabel"
        android:layout_alignBottom="@+id/totalLabel"
        android:layout_alignLeft="@+id/tipPercentTV"
        android:layout_alignStart="@+id/tipPercentTV"
        android:text="@string/total_amount"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/percentTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentA"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/percentLabel"
        android:layout_alignBottom="@+id/percentLabel"
        android:layout_toRightOf="@+id/tipLabel"
        android:layout_toEndOf="@+id/tipLabel"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp" />


        <TextView
            android:id="@+id/billLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/bill_label"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:textColor="@android:color/holo_orange_dark"
            tools:textSize="20sp"
            android:layout_marginTop="28dp"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/percentLabel"
            android:layout_alignStart="@+id/percentLabel" />

    <EditText
        android:id="@+id/billET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteY="31dp"
        android:layout_above="@+id/percentLabel"
        android:layout_toRightOf="@+id/percentLabel"
        android:layout_toEndOf="@+id/percentLabel" />

    <Button
        android:id="@+id/percentUpButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignBaseline="@+id/percentTV"
        android:layout_alignBottom="@+id/percentTV"
        android:layout_marginLeft="27dp"

        android:layout_marginStart="27dp"
        android:layout_toEndOf="@+id/percentTV"
        android:layout_toRightOf="@+id/percentTV"
        android:text="@string/plus"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="239dp" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_marginTop="153dp"
        android:layout_below="@+id/roundingTV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />




       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/split"
           android:textSize="20sp"
           android:textStyle="bold"
           android:id="@+id/textView"

           android:layout_alignTop="@+id/roundingRadioGroup"
           android:layout_alignLeft="@+id/perPersonLabel"
           android:layout_alignStart="@+id/perPersonLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/per_person"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/perPersonLabel"
            android:layout_alignBottom="@+id/roundingRadioGroup"
            android:layout_toLeftOf="@+id/percentDownButton"
            android:layout_toStartOf="@+id/percentDownButton" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$0.00"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/perPersonTV"
            android:layout_alignBaseline="@+id/perPersonLabel"
            android:layout_alignBottom="@+id/perPersonLabel"
            android:layout_alignLeft="@+id/percentDownButton"
            android:layout_alignStart="@+id/percentDownButton" />




        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_alignTop="@+id/textView"
            android:layout_alignRight="@+id/perPersonTV"
            android:layout_alignEnd="@+id/perPersonTV"
            android:layout_toRightOf="@+id/perPersonLabel"
            android:layout_toEndOf="@+id/perPersonLabel">

        </Spinner>

        <TextView
            android:id="@+id/roundingTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rounding"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="13dp"
            android:layout_below="@+id/totalLabel"
            android:layout_alignLeft="@+id/totalLabel"
            android:layout_alignStart="@+id/totalLabel" />

         <RadioGroup
             android:id="@+id/roundingRadioGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="19dp"
             android:layout_below="@+id/roundingTV"
             android:layout_alignRight="@+id/percentLabel"
             android:layout_alignEnd="@+id/percentLabel">




        <RadioButton
            android:id="@+id/NoneRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:checked="true"
            android:text="@string/none"
           />

        <RadioButton
            android:id="@+id/totalRaidoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/total" />

        <RadioButton
            android:id="@+id/tipRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/tip" />
    </RadioGroup>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tipPercentTV"
            android:layout_alignLeft="@+id/percentUpButton"
            android:layout_alignStart="@+id/percentUpButton"
            android:layout_marginLeft="22dp"
            android:layout_marginStart="22dp"
            android:layout_alignRight="@+id/spinner"
            android:layout_alignEnd="@+id/spinner" />
    </RelativeLayout>

</ScrollView>
